--- a/.github/workflows/maven-site-integration.yml
+++ b/.github/workflows/maven-site-integration.yml
@@ -156,8 +156,8 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/frontend:latest
-            ghcr.io/${{ github.repository_owner }}/frontend:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/frontend:latest
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/frontend:${{ github.sha }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
 
@@ -168,6 +168,6 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/backend:latest
-            ghcr.io/${{ github.repository_owner }}/backend:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/backend:latest
+            ghcr.io/${{ github.repository_owner.toLowerCase() }}/backend:${{ github.sha }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
