--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./backend/src/main/resources/db-setup-e3.sql:/docker-entrypoint-initdb.d/db-setup-e3.sql:ro
+    healthcheck:
+      test: "exit 0"
 
   spring-app:
     build:
@@ -23,7 +25,8 @@ services:
     container_name: spring-boot-app
     restart: unless-stopped
     depends_on:
-      - mysql
+      mysql: 
+        condition: service_healthy
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql-container:3306/mv?allowPublicKeyRetrieval=true&useSSL=false
       SPRING_DATASOURCE_USERNAME: e3
