--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Name of the application
 spring.application.name=StudentLoanManagement
 
-# Configuración de la Base de Datos
+# MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/mv?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
