--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate=INFO
 logging.level.org.springframework.security=DEBUG
 logging.level.com.student_loan.security=TRACE
+spring.devtools.restart.log-condition-evaluation-delta=false
+logging.level.org.springframework.boot.devtools.autoconfigure.ConditionEvaluationDeltaLoggingListener=OFF
+
 
 # Springdoc Swagger API Config
 springdoc.api-docs.path=/api-docs
