--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=StudentLoanManagement
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/mv?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=e3
+spring.datasource.password=e3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Settings
