--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "framer-motion": "^12.12.1",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
