--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -204,7 +204,14 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<!-- Required to allow VisualVM profiler connection -->
-					<jvmArguments>-Xverify:none</jvmArguments>
+					<jvmArguments>
+						-Xverify:none
+						-Dcom.sun.management.jmxremote
+						-Dcom.sun.management.jmxremote.port=9010
+						-Dcom.sun.management.jmxremote.authenticate=false
+						-Dcom.sun.management.jmxremote.ssl=false
+						-Dcom.sun.management.jmxremote.local.only=false
+					</jvmArguments>
 				</configuration>
             </plugin>
 
